--- a/source/client/pom.xml
+++ b/source/client/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>hermes</artifactId>
         <groupId>org.vertexarmy.hermes</groupId>
-        <version>1.0-SNAPSHOT</version>
+        <version>0.1.1-ALPHA</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
@@ -43,7 +43,7 @@
         <dependency>
             <groupId>org.vertexarmy.hermes</groupId>
             <artifactId>core</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <version>0.1.1-ALPHA</version>
         </dependency>
     </dependencies>
 </project>
