--- a/source/pom.xml
+++ b/source/pom.xml
@@ -7,7 +7,8 @@
     <groupId>org.vertexarmy.hermes</groupId>
     <artifactId>hermes</artifactId>
     <packaging>pom</packaging>
-    <version>1.0-SNAPSHOT</version>
+    <version>0.1.1-ALPHA</version>
+
     <modules>
         <module>server</module>
         <module>client</module>
