--- a/source/server/pom.xml
+++ b/source/server/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>hermes</artifactId>
         <groupId>org.vertexarmy.hermes</groupId>
-        <version>1.0-SNAPSHOT</version>
+        <version>0.1.1-ALPHA</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>server</artifactId>
@@ -41,7 +41,7 @@
         <dependency>
             <groupId>org.vertexarmy.hermes</groupId>
             <artifactId>core</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <version>0.1.1-ALPHA</version>
         </dependency>
     </dependencies>
 </project>
